Corrección de nombre

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 </head>
 
 <header>
-  <h2>Versionamiento de código con GitHub</h2>
+  <h2>Versionamiento de código con GitHub - GERMAN</h2>
 </header>
 <div id="body">
   <section>
